fuura/ANTLR4/ANTLR4-generated/FuuraParser.cpp

#include "stdafx.h"
#include "..\..\FuuraSemantics.h"
#include "..\..\Calculatables.h"
#pragma warning(disable:4251) // (...) должен иметь dll-интерфейс для использования клиентами.


// Generated from Fuura.g4 by ANTLR 4.7.2


#include "FuuraListener.h"

#include "FuuraParser.h"


using namespace antlrcpp;
using namespace fuura::antlr::generated;
using namespace antlr4;

FuuraParser::FuuraParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FuuraParser::~FuuraParser() {
  delete _interpreter;
}

std::string FuuraParser::getGrammarFileName() const {
  return "Fuura.g4";
}

const std::vector<std::string>& FuuraParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FuuraParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

FuuraParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FuuraParser::Opt_WSContext *> FuuraParser::RootContext::opt_WS() {
  return getRuleContexts<FuuraParser::Opt_WSContext>();
}

FuuraParser::Opt_WSContext* FuuraParser::RootContext::opt_WS(size_t i) {
  return getRuleContext<FuuraParser::Opt_WSContext>(i);
}

tree::TerminalNode* FuuraParser::RootContext::EOF() {
  return getToken(FuuraParser::EOF, 0);
}

FuuraParser::Full_exprContext* FuuraParser::RootContext::full_expr() {
  return getRuleContext<FuuraParser::Full_exprContext>(0);
}


size_t FuuraParser::RootContext::getRuleIndex() const {
  return FuuraParser::RuleRoot;
}

void FuuraParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void FuuraParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

FuuraParser::RootContext* FuuraParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, FuuraParser::RuleRoot);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    opt_WS();
    setState(35);
    dynamic_cast<RootContext *>(_localctx)->stmt = full_expr();
    setState(36);
    opt_WS();
    setState(37);
    match(FuuraParser::EOF);
     dynamic_cast<RootContext *>(_localctx)->node =  std::move(dynamic_cast<RootContext *>(_localctx)->stmt->node); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_exprContext ------------------------------------------------------------------

FuuraParser::If_exprContext::If_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FuuraParser::If_exprContext::IF() {
  return getTokens(FuuraParser::IF);
}

tree::TerminalNode* FuuraParser::If_exprContext::IF(size_t i) {
  return getToken(FuuraParser::IF, i);
}

std::vector<FuuraParser::Opt_WSContext *> FuuraParser::If_exprContext::opt_WS() {
  return getRuleContexts<FuuraParser::Opt_WSContext>();
}

FuuraParser::Opt_WSContext* FuuraParser::If_exprContext::opt_WS(size_t i) {
  return getRuleContext<FuuraParser::Opt_WSContext>(i);
}

std::vector<tree::TerminalNode *> FuuraParser::If_exprContext::BR_OP() {
  return getTokens(FuuraParser::BR_OP);
}

tree::TerminalNode* FuuraParser::If_exprContext::BR_OP(size_t i) {
  return getToken(FuuraParser::BR_OP, i);
}

std::vector<tree::TerminalNode *> FuuraParser::If_exprContext::BR_CL() {
  return getTokens(FuuraParser::BR_CL);
}

tree::TerminalNode* FuuraParser::If_exprContext::BR_CL(size_t i) {
  return getToken(FuuraParser::BR_CL, i);
}

std::vector<tree::TerminalNode *> FuuraParser::If_exprContext::ELSE() {
  return getTokens(FuuraParser::ELSE);
}

tree::TerminalNode* FuuraParser::If_exprContext::ELSE(size_t i) {
  return getToken(FuuraParser::ELSE, i);
}

tree::TerminalNode* FuuraParser::If_exprContext::SEMIC() {
  return getToken(FuuraParser::SEMIC, 0);
}

std::vector<FuuraParser::Full_exprContext *> FuuraParser::If_exprContext::full_expr() {
  return getRuleContexts<FuuraParser::Full_exprContext>();
}

FuuraParser::Full_exprContext* FuuraParser::If_exprContext::full_expr(size_t i) {
  return getRuleContext<FuuraParser::Full_exprContext>(i);
}


size_t FuuraParser::If_exprContext::getRuleIndex() const {
  return FuuraParser::RuleIf_expr;
}

void FuuraParser::If_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_expr(this);
}

void FuuraParser::If_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_expr(this);
}

FuuraParser::If_exprContext* FuuraParser::if_expr() {
  If_exprContext *_localctx = _tracker.createInstance<If_exprContext>(_ctx, getState());
  enterRule(_localctx, 2, FuuraParser::RuleIf_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(FuuraParser::IF);
    setState(41);
    opt_WS();
    setState(42);
    match(FuuraParser::BR_OP);
    setState(43);
    opt_WS();
    setState(44);
    dynamic_cast<If_exprContext *>(_localctx)->condition = full_expr();
    setState(45);
    opt_WS();
    setState(46);
    match(FuuraParser::BR_CL);
    setState(47);
    opt_WS();
    setState(48);
    dynamic_cast<If_exprContext *>(_localctx)->expression = full_expr();

                            dynamic_cast<If_exprContext *>(_localctx)->node =  std::make_unique<fuura::language::OperatorIf>(std::move(dynamic_cast<If_exprContext *>(_localctx)->condition->node), std::move(dynamic_cast<If_exprContext *>(_localctx)->expression->node), getCurrentToken());
                        
    setState(66);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(50);
        opt_WS();
        setState(51);
        match(FuuraParser::ELSE);
        setState(52);
        opt_WS();
        setState(53);
        match(FuuraParser::IF);
        setState(54);
        opt_WS();
        setState(55);
        match(FuuraParser::BR_OP);
        setState(56);
        opt_WS();
        setState(57);
        dynamic_cast<If_exprContext *>(_localctx)->condition = full_expr();
        setState(58);
        opt_WS();
        setState(59);
        match(FuuraParser::BR_CL);
        setState(60);
        opt_WS();
        setState(61);
        dynamic_cast<If_exprContext *>(_localctx)->expression = full_expr();

                                _localctx->node->ElseIf(std::move(dynamic_cast<If_exprContext *>(_localctx)->condition->node), std::move(dynamic_cast<If_exprContext *>(_localctx)->expression->node), getCurrentToken());
                             
      }
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(69);
    opt_WS();
    setState(70);
    match(FuuraParser::ELSE);
    setState(71);
    opt_WS();
    setState(72);
    dynamic_cast<If_exprContext *>(_localctx)->expression = full_expr();
    setState(73);
    opt_WS();
    setState(74);
    match(FuuraParser::SEMIC);

                            _localctx->node->Else(std::move(dynamic_cast<If_exprContext *>(_localctx)->expression->node), getCurrentToken(), m_semantics->GetImplicitTypeCastFactory());
                        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Full_exprContext ------------------------------------------------------------------

FuuraParser::Full_exprContext::Full_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FuuraParser::Not_exprContext *> FuuraParser::Full_exprContext::not_expr() {
  return getRuleContexts<FuuraParser::Not_exprContext>();
}

FuuraParser::Not_exprContext* FuuraParser::Full_exprContext::not_expr(size_t i) {
  return getRuleContext<FuuraParser::Not_exprContext>(i);
}

std::vector<FuuraParser::Opt_WSContext *> FuuraParser::Full_exprContext::opt_WS() {
  return getRuleContexts<FuuraParser::Opt_WSContext>();
}

FuuraParser::Opt_WSContext* FuuraParser::Full_exprContext::opt_WS(size_t i) {
  return getRuleContext<FuuraParser::Opt_WSContext>(i);
}

std::vector<tree::TerminalNode *> FuuraParser::Full_exprContext::OR() {
  return getTokens(FuuraParser::OR);
}

tree::TerminalNode* FuuraParser::Full_exprContext::OR(size_t i) {
  return getToken(FuuraParser::OR, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Full_exprContext::AND() {
  return getTokens(FuuraParser::AND);
}

tree::TerminalNode* FuuraParser::Full_exprContext::AND(size_t i) {
  return getToken(FuuraParser::AND, i);
}


size_t FuuraParser::Full_exprContext::getRuleIndex() const {
  return FuuraParser::RuleFull_expr;
}

void FuuraParser::Full_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFull_expr(this);
}

void FuuraParser::Full_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFull_expr(this);
}

FuuraParser::Full_exprContext* FuuraParser::full_expr() {
  Full_exprContext *_localctx = _tracker.createInstance<Full_exprContext>(_ctx, getState());
  enterRule(_localctx, 4, FuuraParser::RuleFull_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(77);
    dynamic_cast<Full_exprContext *>(_localctx)->not_exprContext = not_expr();

                        dynamic_cast<Full_exprContext *>(_localctx)->node =  std::move(dynamic_cast<Full_exprContext *>(_localctx)->not_exprContext->node);
                    
    setState(95);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(91);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          setState(79);
          opt_WS();
          setState(80);
          match(FuuraParser::OR);
          setState(81);
          opt_WS();
          setState(82);
          dynamic_cast<Full_exprContext *>(_localctx)->next = dynamic_cast<Full_exprContext *>(_localctx)->not_exprContext = not_expr();

                                  dynamic_cast<Full_exprContext *>(_localctx)->node =  m_semantics->GetOperationFactory().CreateBinaryOperation(fuura::language::BinaryOperation::Or, std::move(_localctx->node), std::move(dynamic_cast<Full_exprContext *>(_localctx)->next->node), getCurrentToken());
                              
          break;
        }

        case 2: {
          setState(85);
          opt_WS();
          setState(86);
          match(FuuraParser::AND);
          setState(87);
          opt_WS();
          setState(88);
          dynamic_cast<Full_exprContext *>(_localctx)->next = dynamic_cast<Full_exprContext *>(_localctx)->not_exprContext = not_expr();

                                  dynamic_cast<Full_exprContext *>(_localctx)->node =  m_semantics->GetOperationFactory().CreateBinaryOperation(fuura::language::BinaryOperation::And, std::move(_localctx->node), std::move(dynamic_cast<Full_exprContext *>(_localctx)->next->node), getCurrentToken());
                              
          break;
        }

        } 
      }
      setState(97);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Not_exprContext ------------------------------------------------------------------

FuuraParser::Not_exprContext::Not_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FuuraParser::Cmp_exprContext* FuuraParser::Not_exprContext::cmp_expr() {
  return getRuleContext<FuuraParser::Cmp_exprContext>(0);
}

tree::TerminalNode* FuuraParser::Not_exprContext::NOT() {
  return getToken(FuuraParser::NOT, 0);
}

FuuraParser::Opt_WSContext* FuuraParser::Not_exprContext::opt_WS() {
  return getRuleContext<FuuraParser::Opt_WSContext>(0);
}


size_t FuuraParser::Not_exprContext::getRuleIndex() const {
  return FuuraParser::RuleNot_expr;
}

void FuuraParser::Not_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNot_expr(this);
}

void FuuraParser::Not_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNot_expr(this);
}

FuuraParser::Not_exprContext* FuuraParser::not_expr() {
  Not_exprContext *_localctx = _tracker.createInstance<Not_exprContext>(_ctx, getState());
  enterRule(_localctx, 6, FuuraParser::RuleNot_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FuuraParser::IF:
      case FuuraParser::TRUE:
      case FuuraParser::FALSE:
      case FuuraParser::ID:
      case FuuraParser::POSITIVE_INT:
      case FuuraParser::POSITIVE_FLOAT:
      case FuuraParser::MINUS:
      case FuuraParser::BR_OP: {
        enterOuterAlt(_localctx, 1);
        setState(98);
        dynamic_cast<Not_exprContext *>(_localctx)->cmp_exprContext = cmp_expr();

                            dynamic_cast<Not_exprContext *>(_localctx)->node =  std::move(dynamic_cast<Not_exprContext *>(_localctx)->cmp_exprContext->node);
                        
        break;
      }

      case FuuraParser::NOT: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        match(FuuraParser::NOT);
        setState(102);
        opt_WS();
        setState(103);
        dynamic_cast<Not_exprContext *>(_localctx)->cmp_exprContext = cmp_expr();

                            dynamic_cast<Not_exprContext *>(_localctx)->node =  m_semantics->GetOperationFactory().CreateUnaryOperation(fuura::language::UnaryOperation::Not, std::move(dynamic_cast<Not_exprContext *>(_localctx)->cmp_exprContext->node), getCurrentToken());
                        
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Cmp_exprContext ------------------------------------------------------------------

FuuraParser::Cmp_exprContext::Cmp_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FuuraParser::Add_exprContext *> FuuraParser::Cmp_exprContext::add_expr() {
  return getRuleContexts<FuuraParser::Add_exprContext>();
}

FuuraParser::Add_exprContext* FuuraParser::Cmp_exprContext::add_expr(size_t i) {
  return getRuleContext<FuuraParser::Add_exprContext>(i);
}

std::vector<FuuraParser::Opt_WSContext *> FuuraParser::Cmp_exprContext::opt_WS() {
  return getRuleContexts<FuuraParser::Opt_WSContext>();
}

FuuraParser::Opt_WSContext* FuuraParser::Cmp_exprContext::opt_WS(size_t i) {
  return getRuleContext<FuuraParser::Opt_WSContext>(i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::EQUAL() {
  return getTokens(FuuraParser::EQUAL);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::EQUAL(size_t i) {
  return getToken(FuuraParser::EQUAL, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::NOT_EQUAL() {
  return getTokens(FuuraParser::NOT_EQUAL);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::NOT_EQUAL(size_t i) {
  return getToken(FuuraParser::NOT_EQUAL, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::LESS() {
  return getTokens(FuuraParser::LESS);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::LESS(size_t i) {
  return getToken(FuuraParser::LESS, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::GREATER() {
  return getTokens(FuuraParser::GREATER);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::GREATER(size_t i) {
  return getToken(FuuraParser::GREATER, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::LESS_EQ() {
  return getTokens(FuuraParser::LESS_EQ);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::LESS_EQ(size_t i) {
  return getToken(FuuraParser::LESS_EQ, i);
}

std::vector<tree::TerminalNode *> FuuraParser::Cmp_exprContext::GREATER_EQ() {
  return getTokens(FuuraParser::GREATER_EQ);
}

tree::TerminalNode* FuuraParser::Cmp_exprContext::GREATER_EQ(size_t i) {
  return getToken(FuuraParser::GREATER_EQ, i);
}


size_t FuuraParser::Cmp_exprContext::getRuleIndex() const {
  return FuuraParser::RuleCmp_expr;
}

void FuuraParser::Cmp_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCmp_expr(this);
}

void FuuraParser::Cmp_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FuuraListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCmp_expr(this);
}

FuuraParser::Cmp_exprContext* FuuraParser::cmp_expr() {
  Cmp_exprContext *_localctx = _tracker.createInstance<Cmp_exprContext>(_ctx, getState());
  enterRule(_localctx, 8, FuuraParser::RuleCmp_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(108);
    dynamic_cast<Cmp_exprContext *>(_localctx)->add_exprContext = add_expr();

                        dynamic_cast<Cmp_exprContext *>(_localctx)->node =  std::move(dynamic_cast<Cmp_exprContext *>(_localctx)->add_exprContext->node);
                    
    setState(150);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(146);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          setState(110);
          opt_WS();
          setState(111);
          match(FuuraParser::EQUAL);
          setState(112);
          opt_WS();
          setState(113);
          dynamic_cast<Cmp_exprContext *>(_localctx)->next = dynamic_cast<Cmp_exprContext *>(_localctx)->add_exprContext = add_expr();

                                  dynamic_cast<Cmp_exprContext *>(_localctx)->node =  m_semantics->GetOperationFactory().CreateBinaryOperation(fuura::language::BinaryOperation::Equal, std::move(_localctx->node), std::move(dynamic_cast<Cmp_exprContext *>(_localctx)->next->node), getCurrentToken());
                              
          break;
        }

        case 2: {
          setState(116);
          opt_WS();
          setState(117);
          match(FuuraParser::NOT_EQUAL);
          setState(118);
          opt_WS();
          setState(119);
          dynamic_cast<Cmp_exprContext *>(_localctx)->next = dynamic_cast<Cmp_exprContext *>(_localctx)->add_exprContext = add_expr();
